# aikb

./: .gitignore  README.md  pyproject.toml
aikb/: __init__.py  __main__.py  cli.py  console.py  db.py  export.py  indexer.py  model.py  review.py  sources.py  timeline.py  topics.py  util.py
aikb/adapters/: __init__.py  _jsonl.py  base.py  claude_code.py  claude_export.py  codex.py  cursor.py  gemini.py  generic.py
docs/: ADAPTERS.md  ARCHITECTURE.md  KNOWLEDGE-TRANSFER.md  WALKTHROUGH.md
tests/: test_smoke.py
