[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aikb"
version = "0.1.0"
description = "Local-first knowledge-archaeology CLI: turn messy AI chat exports and agent workspaces into a searchable, source-linked memory."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Rohan Patel" }]
keywords = ["cli", "ai", "chatgpt", "claude", "codex", "search", "knowledge-base", "export", "local-first", "privacy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]
dependencies = []  # zero runtime dependencies — stdlib only, local-only, nothing phones home

[project.urls]
Homepage = "https://github.com/rohanbpatel14/aikb"
Issues = "https://github.com/rohanbpatel14/aikb/issues"

[project.scripts]
aikb = "aikb.cli:main"

[tool.setuptools.packages.find]
include = ["aikb*"]
